--- a/Dashboard.html
+++ b/Dashboard.html
@@ -262,21 +262,21 @@
     <div class="content-wrapper">
         <div class="sidebar">
             <div class="text-center mb-4">
-                <img src="/public/pp.png" alt="Profile Picture" class="rounded-circle mx-auto" style="width: 60px; height: 60px;">
+                <img src="./public/pp.png" alt="Profile Picture" class="rounded-circle mx-auto" style="width: 60px; height: 60px;">
                 <p class="mt-2" id="sidebar-username">Sophia</p>
             </div>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="/home.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link" href="home.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Match.html"><i class="fas fa-users"></i> Matches</a>
+                    <a class="nav-link" href="Match.html"><i class="fas fa-users"></i> Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Messages.html"><i class="fas fa-envelope"></i> Messages</a>
+                    <a class="nav-link" href="Messages.html"><i class="fas fa-envelope"></i> Messages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
+                    <a class="nav-link active" href="Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
                 </li>
             </ul>
             <div class="px-3 mt-4">
@@ -291,14 +291,14 @@
                     <div class="profile-info" id="profile-skills">Teaching: Photography, Learning: Spanish</div>
                     <button class="btn btn-outline-secondary">Find Matches</button>
                 </div>
-                <img src="/public/pp.png" alt="Profile Picture" class="profile-img">
+                <img src="./public/pp.png" alt="Profile Picture" class="profile-img">
             </div>
             <div class="suggested">
                 <h4 class="mb-3">Suggested for you</h4>
                 <div class="row g-3">
                     <div class="col-md-3 col-6">
                         <div class="card">
-                            <img src="/public/Ethan Carter1.png" alt="Ethan Carter" class="card-img-top">
+                            <img src="./public/Ethan Carter1.png" alt="Ethan Carter" class="card-img-top">
                             <div class="card-body">
                                 <strong>Ethan Carter</strong>
                                 <p class="card-text">Learning: Photography<br>Teaching: French</p>
@@ -307,7 +307,7 @@
                     </div>
                     <div class="col-md-3 col-6">
                         <div class="card">
-                            <img src="/public/Olivia Harper1.png" alt="Olivia Harper" class="card-img-top">
+                            <img src="./public/Olivia Harper1.png" alt="Olivia Harper" class="card-img-top">
                             <div class="card-body">
                                 <strong>Olivia Harper</strong>
                                 <p class="card-text">Learning: Spanish<br>Teaching: Graphic Design</p>
@@ -316,7 +316,7 @@
                     </div>
                     <div class="col-md-3 col-6">
                         <div class="card">
-                            <img src="/public/Liam Walker1.png" alt="Liam Walker" class="card-img-top">
+                            <img src="./public/Liam Walker1.png" alt="Liam Walker" class="card-img-top">
                             <div class="card-body">
                                 <strong>Liam Walker</strong>
                                 <p class="card-text">Learning: Photography<br>Teaching: Cooking</p>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="col-md-3 col-6">
                         <div class="card">
-                            <img src="/public/Ava Bennett1.png" alt="Ava Bennett" class="card-img-top">
+                            <img src="./public/Ava Bennett1.png" alt="Ava Bennett" class="card-img-top">
                             <div class="card-body">
                                 <strong>Ava Bennett</strong>
                                 <p class="card-text">Learning: Spanish<br>Teaching: Yoga</p>
@@ -341,7 +341,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="footer-brand">
-                        <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                        <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                         <span>SkillSwap</span>
                     </div>
                     <p class="footer-description">
