--- a/Match.html
+++ b/Match.html
@@ -570,21 +570,21 @@
     <div class="content-wrapper">
         <div class="sidebar">
             <div class="text-center mb-4">
-                <img src="/public/pp.png" alt="Profile Picture" class="rounded-circle mx-auto" style="width: 60px; height: 60px;">
+                <img src="./public/pp.png" alt="Profile Picture" class="rounded-circle mx-auto" style="width: 60px; height: 60px;">
                 <p class="mt-2" id="sidebar-username">Sophia</p>
             </div>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="/home.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link" href="home.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/Match.html"><i class="fas fa-users"></i> Matches</a>
+                    <a class="nav-link active" href="Match.html"><i class="fas fa-users"></i> Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Messages.html"><i class="fas fa-envelope"></i> Messages</a>
+                    <a class="nav-link" href="Messages.html"><i class="fas fa-envelope"></i> Messages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
+                    <a class="nav-link" href="Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
                 </li>
             </ul>
             <div class="px-3 mt-4">
@@ -691,7 +691,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="footer-brand">
-                                <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                                <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                                 <span>SkillSwap</span>
                             </div>
                             <p class="footer-description">
