--- a/Messages.html
+++ b/Messages.html
@@ -177,14 +177,14 @@
             <!-- Sidebar -->
             <div class="col-md-3 col-lg-2 sidebar d-flex flex-column">
                 <div class="text-center mb-4">
-                    <img src="/public/pp.png" class="rounded-circle" alt="Profile" style="width: 60px; height: 60px;">
+                    <img src="./public/pp.png" class="rounded-circle" alt="Profile" style="width: 60px; height: 60px;">
                     <h6 class="mt-2 text-dark" id="sidebar-username">Sophia</h6>
                 </div>
                 <nav class="nav flex-column">
-                    <a class="nav-link" href="/home.html"><i class="fas fa-home"></i> Home</a>
-                    <a class="nav-link" href="/Match.html"><i class="fas fa-users"></i> Matches</a>
-                    <a class="nav-link active" href="/Messages.html"><i class="fas fa-envelope"></i> Messages</a>
-                    <a class="nav-link" href="/Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
+                    <a class="nav-link" href="home.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link" href="Match.html"><i class="fas fa-users"></i> Matches</a>
+                    <a class="nav-link active" href="Messages.html"><i class="fas fa-envelope"></i> Messages</a>
+                    <a class="nav-link" href="Dashboard.html"><i class="fas fa-user-circle"></i> Profile</a>
                 </nav>
             </div>
 
@@ -192,7 +192,7 @@
             <div class="col-md-9 col-lg-10 d-flex flex-column">
                 <!-- Chat Header -->
                 <div class="chat-header">
-                    <img src="/public/Liam Walker1.png" alt="Liam" class="user-avatar me-2">
+                    <img src="./public/Liam Walker1.png" alt="Liam" class="user-avatar me-2">
                     Liam
                 </div>
 
