--- a/aboutus.html
+++ b/aboutus.html
@@ -439,8 +439,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="/home.html">
-        <img src="/public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
+      <a class="navbar-brand" href="home.html">
+        <img src="./public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
         SkillSwap
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -448,13 +448,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/browse.html">Browse</a></li>
-          <li class="nav-item"><a class="nav-link" href="/teach.html">Teach</a></li>
-          <li class="nav-item"><a class="nav-link" href="/aboutus.html">About us</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contactus.html">Contact us</a></li>
+          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="browse.html">Browse</a></li>
+          <li class="nav-item"><a class="nav-link" href="teach.html">Teach</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
+          <li class="nav-item"><a class="nav-link" href="contactus.html">Contact us</a></li>
         </ul>
-        <a class="nav-link" href="/signin.html">
+        <a class="nav-link" href="signin.html">
           <button class="btn btn-signup-corner">SIGNUP</button>
         </a>
       </div>
@@ -463,7 +463,7 @@
 
   <!-- Banner -->
   <div class="container mt-4 banner">
-    <img src="/public/AboutusHero.png" alt="About Us Banner">
+    <img src="./public/AboutusHero.png" alt="About Us Banner">
   </div>
 
   <!-- Our Vision -->
@@ -477,22 +477,22 @@
     <h4>Meet <span>the Team</span></h4>
     <div class="row text-center mt-4">
       <div class="col-md-3 team-member">
-        <img src="/public/Ethan Carter.png" alt="Ethan Carter">
+        <img src="./public/Ethan Carter.png" alt="Ethan Carter">
         <h6>Ethan Carter</h6>
         <p>Co-founder & CEO</p>
       </div>
       <div class="col-md-3 team-member">
-        <img src="/public/Sophia Lee.png" alt="Sophia Lee">
+        <img src="./public/Sophia Lee.png" alt="Sophia Lee">
         <h6>Sophia Lee</h6>
         <p>Head of Product</p>
       </div>
       <div class="col-md-3 team-member">
-        <img src="/public/Noah Clark.png" alt="Noah Clark">
+        <img src="./public/Noah Clark.png" alt="Noah Clark">
         <h6>Noah Clark</h6>
         <p>Lead Developer</p>
       </div>
       <div class="col-md-3 team-member">
-        <img src="/public/Ava Harper.png" alt="Ava Harper">
+        <img src="./public/Ava Harper.png" alt="Ava Harper">
         <h6>Ava Harper</h6>
         <p>Community Manager</p>
       </div>
@@ -513,7 +513,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="footer-brand">
-            <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+            <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
             <span>SkillSwap</span>
           </div>
           <p class="footer-description">
