--- a/browse.html
+++ b/browse.html
@@ -458,7 +458,7 @@
   <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
             <div class="container">
-                <a class="navbar-brand" href="/home.html">
+                <a class="navbar-brand" href="home.html">
                     <i class="fas fa-circle" style="color: #4FC3F7;"></i>
                     <i class="fas fa-circle" style="color: #81D4FA; margin-left: -15px;"></i>
                     SkillSwap
@@ -470,13 +470,13 @@
                 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/browse.html">Browse</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/teach.html">Teach</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/aboutus.html">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contactus.html">Contact us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="browse.html">Browse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="teach.html">Teach</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contactus.html">Contact us</a></li>
                     </ul>
-                    <a class="nav-link" href="/signin.html">
+                    <a class="nav-link" href="signin.html">
                     <button class="btn btn-signup-corner">SIGNUP</button></a>
                 </div>
             </div>
@@ -604,7 +604,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="footer-brand">
-                        <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                        <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                         <span>SkillSwap</span>
                     </div>
                     <p class="footer-description">
