--- a/contactus.html
+++ b/contactus.html
@@ -482,8 +482,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/home.html">
-                <img src="/public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="home.html">
+                <img src="./public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
                 SkillSwap
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -491,13 +491,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/browse.html">Browse</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/teach.html">Teach</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/aboutus.html">About us</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/contactus.html">Contact us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="browse.html">Browse</a></li>
+                    <li class="nav-item"><a class="nav-link" href="teach.html">Teach</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contactus.html">Contact us</a></li>
                 </ul>
-                <a class="nav-link" href="/signin.html">
+                <a class="nav-link" href="signin.html">
                     <button class="btn btn-signup-corner">SIGNUP</button>
                 </a>
             </div>
@@ -526,7 +526,7 @@
                 </form>
             </div>
             <div class="contact-image">
-                <img src="/public/sample.png" alt="Contact Support">
+                <img src="./public/sample.png" alt="Contact Support">
             </div>
         </div>
     </div>
@@ -537,7 +537,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="footer-brand">
-                        <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                        <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                         <span>SkillSwap</span>
                     </div>
                     <p class="footer-description">
