--- a/signin.html
+++ b/signin.html
@@ -561,8 +561,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/home.html">
-                <img src="/public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="home.html">
+                <img src="./public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
                 SkillSwap
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -570,13 +570,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/browse.html">Browse</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/teach.html">Teach</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/aboutus.html">About us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contactus.html">Contact us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="browse.html">Browse</a></li>
+                    <li class="nav-item"><a class="nav-link" href="teach.html">Teach</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact us</a></li>
                 </ul>
-                <a class="nav-link" href="/signin.html">
+                <a class="nav-link" href="signin.html">
                     <button class="btn btn-signup-corner">SIGNUP</button>
                 </a>
             </div>
@@ -585,7 +585,7 @@
 
     <!-- Main Banner -->
     <div class="banner container">
-        <img src="/public/SignupHero.jpg" alt="SkillSwap Banner" class="img-fluid">
+        <img src="./public/SignupHero.jpg" alt="SkillSwap Banner" class="img-fluid">
         <div class="banner-overlay">Join Our Learning Community</div>
     </div>
 
@@ -602,10 +602,18 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="Your email address" required>
                 </div>
-                <div class="form-group">
+
+                    <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Create a password" required>
-                </div>
+                    </div>
+                    <div style="margin-top: 5px;" class="form-check">
+                    <input type="checkbox" id="showPassword" onclick="myFunction()">
+                    <label for="showPassword">Show Password</label>
+                    </div>
+
+
+
                 <div class="form-group">
                     <label for="teach">Skill to Teach</label>
                     <input type="text" id="teach" placeholder="What skill can you share?">
@@ -616,7 +624,7 @@
                 </div>
                 <button type="submit">Register Now</button>
             </form>
-            <p class="login-link">Already have an account? <a href="/login.html">Log in</a></p>
+            <p class="login-link">Already have an account? <a href="login.html">Log in</a></p>
         </div>
     </div>
 
@@ -626,7 +634,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="footer-brand">
-                        <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                        <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                         <span>SkillSwap</span>
                     </div>
                     <p class="footer-description">
@@ -675,7 +683,16 @@
             </div>
         </div>
     </footer>
-
+<script>
+  function myFunction() {
+    const passwordField = document.getElementById("password");
+    if (passwordField.type === "password") {
+      passwordField.type = "text";
+    } else {
+      passwordField.type = "password";
+    }
+  }
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
