--- a/teach.html
+++ b/teach.html
@@ -403,8 +403,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/home.html">
-                <img src="/public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="home.html">
+                <img src="./public/logo.png" alt="SkillSwap Logo" width="30" height="30" class="d-inline-block align-text-top">
                 SkillSwap
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -412,13 +412,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/browse.html">Browse</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/teach.html">Teach</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/aboutus.html">About us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contactus.html">Contact us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="browse.html">Browse</a></li>
+                    <li class="nav-item"><a class="nav-link" href="teach.html">Teach</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact us</a></li>
                 </ul>
-                <a class="nav-link" href="/signin.html">
+                <a class="nav-link" href="signin.html">
                     <button class="btn btn-signup-corner">SIGNUP</button>
                 </a>
             </div>
@@ -435,7 +435,7 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="/public/1.png" class="card-img-top" alt="Study Tips">
+                    <img src="./public/1.png" class="card-img-top" alt="Study Tips">
                     <div class="card-body">
                         <h6 class="card-title">Study Tips</h6>
                         <p  class="card-text">Boost your study efficiency with proven techniques.</p>
@@ -444,7 +444,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/2.png" alt="Soft Skills" class="card-img-top">
+                    <img src="./public/2.png" alt="Soft Skills" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Soft Skills</h6>
                         <p class="card-text">Master essential soft skills for professional success.</p>
@@ -453,7 +453,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/3.png" alt="Time Management" class="card-img-top">
+                    <img src="./public/3.png" alt="Time Management" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Time Management</h6>
                         <p class="card-text">Optimize your time and productivity with these strategies.</p>
@@ -462,7 +462,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/4.png" alt="Effective Communication" class="card-img-top">
+                    <img src="./public/4.png" alt="Effective Communication" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Effective Communication</h6>
                         <p class="card-text">Enhance communication skills for better interactions.</p>
@@ -476,7 +476,7 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="/public/5.png" alt="Online Courses" class="card-img-top">
+                    <img src="./public/5.png" alt="Online Courses" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Online Courses</h6>
                         <p class="card-text">Access curated online courses to boost your knowledge.</p>
@@ -485,7 +485,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/6.png" alt="Interactive Tutorials" class="card-img-top">
+                    <img src="./public/6.png" alt="Interactive Tutorials" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Interactive Tutorials</h6>
                         <p class="card-text">Engage with interactive tutorials for hands-on learning.</p>
@@ -494,7 +494,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/7.png" alt="Skill Assessments" class="card-img-top">
+                    <img src="./public/7.png" alt="Skill Assessments" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Skill Assessments</h6>
                         <p class="card-text">Evaluate your skills with comprehensive assessments.</p>
@@ -503,7 +503,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/8.png" alt="Webinars" class="card-img-top">
+                    <img src="./public/8.png" alt="Webinars" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Webinars</h6>
                         <p class="card-text">Join live webinars and workshops for real-time learning.</p>
@@ -517,7 +517,7 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="/public/9.png" alt="Peer Feedback" class="card-img-top">
+                    <img src="./public/9.png" alt="Peer Feedback" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Peer Feedback</h6>
                         <p class="card-text">Learn from your peers through constructive feedback.</p>
@@ -526,7 +526,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/10.png" alt="Group Study" class="card-img-top">
+                    <img src="./public/10.png" alt="Group Study" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Group Study</h6>
                         <p class="card-text">Collaborate with others in group study sessions.</p>
@@ -535,7 +535,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/11.png" alt="Mentorship" class="card-img-top">
+                    <img src="./public/11.png" alt="Mentorship" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Mentorship</h6>
                         <p class="card-text">Gain insights from experienced mentors in your field.</p>
@@ -544,7 +544,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/public/12.png" alt="Networking" class="card-img-top">
+                    <img src="./public/12.png" alt="Networking" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-title">Networking</h6>
                         <p class="card-text">Connect with professionals and expand your network.</p>
@@ -560,7 +560,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="footer-brand">
-                        <img src="/public/logo.png" alt="SkillSwap Logo" class="footer-logo">
+                        <img src="./public/logo.png" alt="SkillSwap Logo" class="footer-logo">
                         <span>SkillSwap</span>
                     </div>
                     <p class="footer-description">
